<resources>
    <string name="app_name">Chat App</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="settings">Settings</string>
    <string name="chats">Chats</string>
    <string name="users">Users</string>
    <string name="profile">Profile</string>
    <string name="e_mail">E-Mail</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="status">Status</string>
    <string name="user_name">User Name</string>
    <string name="type_a_message">Type a message...</string>
    <string name="status_message">Status Message</string>
    <item name="photoView" type="id"/>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="chat_messages">Chat Messages</string>
</resources>
